<package format="3">
  <name>coffee_maker_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclrs</depend>
  <depend>obd_coffee_maker_interface</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>